samples/_failures_safe/1761341403_e1c799_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f62a10a0.c: In function ‘main’:
./samples/SAFE/__tmp_f62a10a0.c:143:16: error: missing terminating " character
  143 |         printf("Compression ratio:
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f62a10a0.c:143:9: error: expected expression at end of input
  143 |         printf("Compression ratio:
      |         ^~~~~~
./samples/SAFE/__tmp_f62a10a0.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f62a10a0.c:143:9: error: expected declaration or statement at end of input
